--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
-  "repository": {
+   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jukades/goit-js-hw-08.git"
+    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
   },
   "keywords": [],
-  "author": "Jekaterina Sedjuka <jekaterina.sedjuka@gmail.com>",
-  "license": "",
+  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jukades/goit-js-hw-08/issues"
+    "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
     "modern-normalize": "^1.1.0",
