--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
-   "repository": {
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/goitacademy/parcel-project-template.git"
   },
@@ -18,6 +18,7 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@vimeo/player": "^2.18.0",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.10.3"
   },
